fixed column gap in logo show

--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,7 @@ footer .social-icon i {
   .logo-container {
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 20px;
-    grid-column-gap:30px ;
+    grid-column-gap:20px ;
   }
 
   /* popular collection */
